parser/tests/parser/expressions/invalid_contents/quote.mf2
{1 a |}| thing}
=== spans ===
                    {1 a |}| thing}
SimpleMessage       ^^^^^^^^^^^^^^^
LiteralExpression   ^^^^^^^^^^^^^^^
Number               ^
Number.integral      ^
=== diagnostics ===
Unrecognized placeholder contents (at @3..14)
  {1 a |}| thing}
     ^^^^^^^^^^^
=== ast ===
SimpleMessage {
    parts: [
        LiteralExpression {
            span: @0..15,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}